--- a/package.json
+++ b/package.json
@@ -23,11 +23,11 @@
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
     "motion": "^12.7.3",
-    "next": "13.4.19",
+    "next": "^13.4.19",
     "postcss": "8.4.28",
     "prismjs": "^1.29.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "remark-gfm": "^3.0.1",
     "shadcn": "^2.4.1",
     "tailwind-merge": "^1.14.0",
